--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,10 @@
 name=SC16IS7X0
-version=1.0.0
+version=1.0.0-dev
 author=Alexandre Maurer, alexmaurer@madis.ch
 maintainer=Alexandre Maurer, alexmaurer@madis.ch
 sentence=Library to read and write UART and GPIO for the SC16IS740_750_760
 paragraph=Add an additional hardware UART and some GPIOs to your Arduino project.
 category=Communication
 url=https://github.com/alexmaurer-madis/SC16IS7X0
-architectures=esp8266
+architectures=esp8266, esp32
 depends=Adafruit BusIO
-
