--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=SC16IS7X0
-version=1.0.0-dev
+version=1.0.1
 author=Alexandre Maurer, alexmaurer@madis.ch
 maintainer=Alexandre Maurer, alexmaurer@madis.ch
 sentence=Library to read and write UART and GPIO for the SC16IS740_750_760
